--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Snowboard shop</title>
+	<title>Gulp assembly</title>
 	<link rel="stylesheet" href="main.css">
+	<script src="index.js" defer></script>
 </head>
 <body>
 	<div class="wrapper">
